# Chronos

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
chrome-extension/: background.js  blocked.html  blocked.js  manifest.json
frontend/: package-lock.json  package.json
frontend/public/: electron.js  index.html
frontend/src/: index.js
frontend/src/components/: Dashboard.jsx
scripts/: install_startup_macos.sh  install_startup_windows.ps1
src/chronos/: __init__.py  config.py  db.py
src/chronos/analytics/: analytics.py
src/chronos/api/: routes.py
src/chronos/cli/: main.py
src/chronos/models/: models.py
src/chronos/monitoring/: native_messaging.py  window_tracker.py
src/chronos/notifications/: notifier.py
src/chronos/tasks/: task_manager.py
tests/: conftest.py  test_analytics.py  test_api.py  test_db.py  test_models.py  test_tasks.py
